--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -10,6 +10,11 @@
             <div class="text">Servicios</div>
           </div>
         </a>
+        <a class="left2" href="#trabajos">
+          <div>
+            <div class="text">Trabajos</div>
+          </div>
+        </a>
         <a class="center" href="#inicio">
           <div class="center">
             <div class="explainer"><span class="txt-menu"><fa-icon class="faMenu" [icon]="faCoffee"></fa-icon>Menu</span></div>
@@ -19,6 +24,11 @@
         <a class="right" href="#trayectoria">
           <div >
             <div class="text">Trayectoria</div>
+          </div>
+        </a>
+        <a class="right2" href="#blog">
+          <div >
+            <div class="text">Blog</div>
           </div>
         </a>
         <a class="righter" href="#contacto">
