--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -34,7 +34,7 @@
             <p>Typescript</p>
         </div>    
     </div>
-    <h3 class="sub-title">Aprendiendo...</h3>
+    <h3 class="sub-title title-learning">Aprendiendo...</h3>
     <div class="ctn-learning">
         <div class="ctn-img-logo">
             <img class="logo" src="../../../assets/img/icono-python.png" alt="Python" >
