--- a/src/app/pages/timeline/timeline.component.scss
+++ b/src/app/pages/timeline/timeline.component.scss
@@ -1,4 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
+
+$background: #252827;
+
+$color-primary: #4298C3;
+$color-light: white;
+$spacing: 13px;
+$radius: 4px;
+
+$date: 120px;
+$dotborder: 4px;
+$dot: 11px;
+$line: 4px;
+
+$font-title: 'Oswald', sans-serif;
+$font-text: 'Source Sans Pro', sans-serif;
+
+
+
 .body-inicio {
     text-align: center;
     display: flex;
@@ -6,6 +24,8 @@
     background-image: url('../../../assets/img/fondo-grandient.jpg');
     background-repeat: no-repeat; 
     background-size: cover; 
+    transform: rotate(180deg);
+
 }
 .ctn-inicio {
     background-color: white;
@@ -16,6 +36,8 @@
     border: none;
     background-color: rgb(143 143 143 / 52%);
     backdrop-filter: blur(10px);
+    transform: rotate(180deg);
+
 }
 
 .ctn-time-line {
@@ -36,7 +58,21 @@ h3 {
     font-size: 20px;
     font-family: 'Hubballi', cursive;
 }
-  
+.menu-oculto {
+    display: none;
+}
+.ctn-boton-menu {
+    display: none;
+  }
+.ctn-boton-close {
+    height: 30px;
+    background: transparent;
+    border: none;
+    img {
+        width: 50px;
+    }
+}
+/*TIMELINE DESKTOP*/
 .horizontal-timeline-container {
     display: flex;
     flex-direction: row;
@@ -51,7 +87,7 @@ h3 {
         left: 0;
         width: 100%;
         height: 3px;
-        background: rgb(85, 85, 85);
+        background: rgb(9,7,152)
     }
 }
 
@@ -66,7 +102,8 @@ h3 {
 }
 
 .timeline-step-counter {
-    background: rgb(196, 100, 10);
+    background: rgb(9,7,152);
+    background: linear-gradient(90deg, rgba(9,7,152,1) 0%, rgba(31,136,219,1) 61%, rgba(0,212,255,1) 100%);
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
     
@@ -86,7 +123,7 @@ h3 {
     background: white;
     border-radius: 5px;
     box-shadow: 0px 7px 13px 2px rgba(0,0,0,0.58);
-    padding: 1em;
+    padding: 10px;
     position: absolute;
     width: 100%;
     text-align: center;
@@ -120,5 +157,184 @@ h3 {
         width: 0;
         border: 7px solid transparent;
         border-top: 7px solid white;
+    }
+}
+
+/*TIMELINE MOBILE*/
+#content {
+    text-align: center;
+    display: none;
+}
+.timeline {
+    border-left: $line solid $color-primary;
+    border-bottom-right-radius: $radius;
+    border-top-right-radius: $radius;    
+    background: fade($color-light, 3%);
+    color: fade(white, 80%);
+    font-family: $font-text;  
+    margin-left: 80px;
+    letter-spacing: 0.5px;   
+    position: relative;
+    line-height: 1.3em;
+    font-size: 13px;   
+    padding: $spacing;   
+    list-style: none;
+    text-align: left;  
+    max-width: 90%; 
+    
+    h1, h2, h3 {
+     font-family: $font-title;
+     letter-spacing: 1.5px;
+     font-weight: 100;
+     font-size: 1.4em;    
+    }
+    
+    .event {
+      border-bottom: 1px dashed fade($color-light, 10%);
+      padding-bottom: ($spacing * 0.5);
+      margin-bottom: $spacing;  
+      position: relative;
+  
+      &:last-of-type { 
+        padding-bottom: 0;
+        margin-bottom: 0; 
+        border: none;      
+      }
+  
+      &:before, &:after {
+        position: absolute;
+        display: block;
+        top: 0;
+      }
+  
+      &:before {
+        left: ((($date * 0.6) + $spacing + $line + $dot + ($dotborder * 2)) * 1.5) * -1;    
+        color: fade($color-light, 40%);    
+        content: attr(data-date);
+        text-align: right;
+        font-weight: 100;    
+        font-size: 0.9em;
+        min-width: $date;
+      }
+  
+      &:after {
+        box-shadow: 0 0 0 $dotborder fade($color-primary,100%);    
+        left: ($spacing + $line + ($dot * 0.35)) * -1;        
+        background: lighten($background,5%);    
+        border-radius: 50%;  
+        height: $dot;
+        width: $dot;
+        content: "";
+        top: 5px;
+      }
+    }
+  }
+
+
+@media (max-width: 1354px) {
+    .timeline-content{
+        .timeline-block:nth-child(odd) & {
+            top: -58px;
+        }
+    }
+}
+
+@media (max-width: 1140px) {
+    .timeline-step-counter {
+        width: 120px;
+    }
+}
+@media (max-width: 1000px) {
+    app-menu {
+        display: none;
+      }
+    .body-inicio{
+        display: block;
+    }
+    .ctn-inicio {
+        width: 90% !important;
+        margin-top: 36px;
+    }
+    .ctn-boton-menu{
+        display: block;
+        text-align: initial;
+        margin-left: 10px;
+        margin-top: -10px;
+        button {
+            background: transparent;
+            border: none;
+        }
+    }
+    .menu {
+        transition-duration: .5s;
+        background-color: rgba(109, 109, 109, 0.905);
+        width: 280px;
+        position: fixed;
+        z-index: 1;
+        height: 70vh;
+        border-bottom-right-radius: 30px;
+        border-top-right-radius: 30px;
+        overflow: hidden;
+        margin-top: -65px;
+        ul {
+            overflow: hidden;
+            list-style: none;
+            width: 200px;
+            margin-top: 40px;
+            li {
+                padding: 20px 0;
+                margin: 10px 0;
+                border-left: 3px solid rgb(68, 68, 68);
+                font-family: 'Hubballi', cursive;
+                font-size: 25px;
+            }
+        }
+    }
+    .menu-oculto {
+        width: 0;
+    }
+}
+@media (max-width: 972px) {
+    .timeline-content {
+        width: 130%;
+        .timeline-block:nth-child(odd) & {
+            left: 0;
+        }
+        .timeline-block:nth-child(even) & {
+            left: 10px;
+        }
+    }
+}
+@media (max-width: 788px) {
+    .timeline-step-counter{
+        width: 95px;
+    }
+    .timeline-content {
+
+        .timeline-block:nth-child(even) & {
+            bottom: -44px;
+        }
+    }
+}
+@media (max-width: 670px) {
+    .horizontal-timeline-container {
+        display: none;
+    }
+    #content {
+        display: block;
+    }
+    .ctn-time-line {
+        justify-content: initial;
+    }
+    .title-event {
+        margin-top: 15px;
+    }
+}
+@media (max-width: 414px) {
+    .timeline{
+        margin-left: 50px;
+    }
+    .title-event {
+        font-size: 1.1em !important;
     }
 }
