--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
 	<div class="section">
 		<app-projects></app-projects>
 	</div>
+	<div class="section">
+		<app-blog></app-blog>
+	</div>
 	<div class="section" >
 		<app-contact></app-contact>
 	</div>
