--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="body-inicio vh-100">
+<app-container>
     <div class="ctn-inicio  w-75 d-inline-block">
         <app-menu></app-menu>
         <div class="ctn-form">
@@ -19,6 +19,9 @@
                     <button type="submit">Enviar</button>
                 </div>
               </form>
+              <div class="ctn-img">
+                  <img src="../../../assets/img/tarjeta2.png" alt="">
+              </div>
         </div>
     </div>
-</div>
+</app-container>
