--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,12 +1,12 @@
-<div class="body-inicio vh-100">
+<app-container>
     <div class="ctn-inicio  w-75 d-inline-block">
         <app-menu></app-menu>
         <div class="container ctn-txt-img">
-            <div class="row align-items-center">
+            <div class="row align-items-center ctn-info-inicio">
                 <div class="col" >
                     <div class="ctn-texto">
                         <h2>Jorge Alexander Córdoba</h2>
-
+    
                         <div class="content">
                             <div class="content__container">
                               <ul class="content__container__list">
@@ -17,12 +17,12 @@
                               </ul>
                             </div>
                         </div>
-
+    
                         <p class="txt-description">Hola! Soy un desarrollador de software apasionado a la tecnología con una amplia experiencia en la construccion de aplicaciones web modernas.</p>
                         
                     </div>
                 </div>
-                <div class="col align-self-center" >
+                <div class="col align-self-center ctn-img-inicio" >
                     <img class="img-avatar" src="../../../assets/img/avatar2.png" alt="Me">
                 </div>
             </div>
@@ -34,4 +34,4 @@
           <span class="text-scroll">Scroll down</span>
         </div>
     </div>
-</div>
+</app-container>
