--- a/src/app/pages/skills/skills.component.scss
+++ b/src/app/pages/skills/skills.component.scss
@@ -4,7 +4,6 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    margin-top: 40px;
     flex-wrap: wrap;
 }
 .ctn-skills,
@@ -12,7 +11,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-
+    flex-wrap: wrap !important;
 }
 .ctn-img-logo {
     width: 85px;
@@ -28,7 +27,34 @@
     transition-duration: 0.3s;
 }
 .sub-title {
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Hubballi', cursive;
     font-weight: bold;
+    margin: 10px 0;
+}
+@media (max-width: 800px) {
+    .logo{
+        width: 45px;
+    }
+    .sub-title {
+        font-size: 25px;
+        margin-top: 5px;
+    }
+
+}
+@media (max-width: 388px) {
+    .ctn-learning,
+    .title-learning {
+        display: none;
+    }
+
+}
+@media (max-width: 500px) {
+    .ctn-skills {
+        flex-wrap: wrap !important;
+    }
+    .logo{
+        width: 45px;
+    }
+  
 }
